# dynamic365-automate

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PORTING.md  README.md  scheduler.toml
.github/workflows/: ci.yml  release.yml
apps/d365-automate-bench/: Cargo.toml
apps/d365-automate-bench/src/: main.rs
apps/d365-automate-gw/: Cargo.toml
apps/d365-automate-gw/src/: main.rs
apps/d365-automate-ingest/: Cargo.toml
apps/d365-automate-ingest/src/: main.rs
apps/d365-automate-server/: Cargo.toml
apps/d365-automate-server/src/: context.rs  lib.rs  main.rs  prompts.rs  resources.rs  seed.rs  tools.rs
apps/d365-automate-server/tests/: server_smoke.rs
apps/d365-automate-tui/: Cargo.toml
apps/d365-automate-tui/src/: app.rs  main.rs  traffic.rs  ui.rs
apps/d365-automate-tui/src/tabs/: kb.rs
apps/sample-client/: Cargo.toml
apps/sample-client/src/: main.rs
apps/sample-server/src/: main.rs
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/mcp/: route.ts
apps/web/src/app/graph/: page.tsx
apps/web/src/app/query-lab/: page.tsx
apps/web/src/app/skills/: page.tsx
apps/web/src/app/tools/: page.tsx
apps/web/src/components/: sidebar.tsx
apps/web/src/lib/: mcp.ts
crates/d365-automate-channels/: Cargo.toml
crates/d365-automate-connectors/: Cargo.toml
crates/d365-automate-connectors/src/: lib.rs
crates/d365-automate-graph/: Cargo.toml
crates/d365-automate-graph/src/: community.rs  entity.rs  lib.rs  ppr.rs  raptor.rs  store.rs
crates/d365-automate-ingest/: Cargo.toml
crates/d365-automate-ingest/src/: chunker.rs  crawler.rs  embed.rs  fit_markdown.rs  lib.rs  pipeline.rs  rate_limit.rs  robots.rs
crates/d365-automate-kb/: Cargo.toml
crates/d365-automate-kb/src/: doc_tree.rs  lib.rs  qdrant.rs  schema.rs  store.rs
crates/d365-automate-memory/: Cargo.toml
crates/d365-automate-memory/src/: lib.rs
crates/d365-automate-meta/: Cargo.toml
crates/d365-automate-meta/src/: client.rs  connection.rs  error.rs  http.rs  lib.rs  mock.rs  types.rs
crates/d365-automate-observability/: Cargo.toml
crates/d365-automate-observability/src/: audit.rs  lib.rs  metrics.rs  tracing_init.rs
crates/d365-automate-odata/: Cargo.toml
crates/d365-automate-odata/src/: client.rs  credentials.rs  error.rs  http.rs  infolog.rs  lib.rs  metadata_cache.rs  pool.rs  retry.rs  transaction.rs
crates/d365-automate-rag/: Cargo.toml
crates/d365-automate-rag/src/: graph_layer.rs  lib.rs  rerank.rs
crates/d365-automate-scheduler/: Cargo.toml
crates/d365-automate-scheduler/src/: lib.rs
crates/d365-automate-skills/: Cargo.toml
crates/d365-automate-skills/src/: lib.rs
crates/mcp-core/src/: error.rs  protocol.rs
crates/mcp-server/src/: elicit.rs  registry.rs  server.rs
crates/mcp-server/tests/: integration.rs
crates/mcp-transport/src/: http.rs
deploy/: Dockerfile  d365-automate-connection.example.toml
deploy/grafana/: d365-automate-overview.json
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.example.yaml  service.yaml
docs/: COMPARISON.md  D365_CORRECTNESS.md  INTEGRATION.md  PRODUCTION_PLAN.md  ROADMAP.md  RUNBOOK_DEV_ENVIRONMENT.md
docs/sample-learn-corpus/: period-close.html  product-receipt.html
skills/: aipnv-ai-pairing.md  custom-service-scaffolding.md  customer-master-elicit.md  data-entity-design.md  deploy-impact-analysis.md  extension-audit.md  karpathy-guidelines.md  package-deploy-elicit.md  period-close-investigation.md  po-creation-elicit.md  security-sod-audit.md  synapse-link-migration.md  xpp-code-review.md
