[workspace]
resolver = "2"
members = [
    # ── MCP protocol foundation (ERP-agnostic) ──────────────────────────
    "crates/mcp-core",
    "crates/mcp-transport",
    "crates/mcp-server",
    "crates/mcp-client",
    # ── ERP-agnostic engines + agentic layer (Phase 2) ──────────────────
    "crates/d365-automate-kb",
    "crates/d365-automate-rag",
    "crates/d365-automate-graph",
    "crates/d365-automate-ingest",
    "crates/d365-automate-memory",
    "crates/d365-automate-skills",
    "crates/d365-automate-scheduler",
    "crates/d365-automate-channels",
    "crates/d365-automate-connectors",
    "crates/d365-automate-observability",
    # ── Dynamics 365 backend tier (Phase 3) ─────────────────────────────
    "crates/d365-automate-odata",
    "crates/d365-automate-meta",
    # ── MCP server (Phase 4) ────────────────────────────────────────────
    "apps/d365-automate-server",
    # ── Apps (Phase 5) ──────────────────────────────────────────────────
    "apps/d365-automate-tui",
    "apps/d365-automate-gw",
    "apps/d365-automate-ingest",
    "apps/d365-automate-bench",
    "apps/sample-server",
    "apps/sample-client",
    # ── Web UI (Phase 6), deploy/CI (Phase 7), skills/docs (Phase 8) — see PORTING.md
]

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/rismanmattotorang/dynamic365-automate"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / utility
thiserror = "1"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Internal crates — MCP foundation (ERP-agnostic)
mcp-core = { path = "crates/mcp-core" }
mcp-transport = { path = "crates/mcp-transport" }
mcp-server = { path = "crates/mcp-server" }
mcp-client = { path = "crates/mcp-client" }

# Internal crates — ERP-agnostic engines + agentic layer
d365-automate-kb = { path = "crates/d365-automate-kb" }
d365-automate-rag = { path = "crates/d365-automate-rag" }
d365-automate-graph = { path = "crates/d365-automate-graph" }
d365-automate-ingest = { path = "crates/d365-automate-ingest" }
d365-automate-memory = { path = "crates/d365-automate-memory" }
d365-automate-skills = { path = "crates/d365-automate-skills" }
d365-automate-scheduler = { path = "crates/d365-automate-scheduler" }
d365-automate-channels = { path = "crates/d365-automate-channels" }
d365-automate-connectors = { path = "crates/d365-automate-connectors" }
d365-automate-observability = { path = "crates/d365-automate-observability" }

# Internal crates — Dynamics 365 backend tier
d365-automate-odata = { path = "crates/d365-automate-odata" }
d365-automate-meta = { path = "crates/d365-automate-meta" }

# HTTP / web
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
quick-xml = { version = "0.36", features = ["serialize"] }
toml = "0.8"
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "cookies"] }
url = "2"
scraper = "0.20"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
