[package]
name = "d365-automate-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "D365-Automate connectors: Metadata API (X++), Power Automate (flows), Dataverse (solutions)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
