[package]
name = "d365-automate-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proactive scheduler for declared Dynamics 365 monitoring jobs."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
